@@ -23,7 +23,7 @@
 
 <h1>libstdc++-v3 Source Documentation</h1>
 
-<h2> Documentation Overview </h2>
+<h2>Documentation Overview</h2>
 
 <p class="smallertext">@LEVEL@-level docs, generated @DATE@.</p>
 
@@ -48,6 +48,7 @@
    <ul>
     <li><a href="annotated.html">Compound List</a>
     <li><a href="classes.html">Alphabetical List</a>
+    <li><a href="namespaces.html">Namespace List</a>
     <li><a href="files.html">File List</a>
     <li><a href="modules.html">Modules</a>
    </ul>
@@ -79,16 +80,6 @@
 href="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/C++STYLE">C++STYLE</a>.
    Before any doxygen-specific formatting tweaks are made, please try to
    make sure that the initial formatting is sound.
-</p>
-
-<p>The formatting guidelines for using libstdc++-v3 with doxygen are still
-   incomplete.  There seems to be a marginal preference for the use of
-   Java-Doc style formatting, with the idea that the single-line style
-   (triple-slash) is the least intrusive mechanism for getting libstdc++-v3
-   documented and cross-referenced while at the same time minimizing
-   disruption to the current formatting.  Full documentation of functions
-   (parameter types, return values, etc) will require the slash-splat-splat
-   &quot;extended C&quot; commenting style.
 </p>
 
 <h2> Full page index </h2>
